syntax = "proto3";

option go_package = "./go-proto-output/auth";

package auth;

// Since we're not using gRPC-Gateway in your setup, you can safely remove the import statement
// import "google/api/annotations.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
  }
  
  message RegisterResponse {
    string token = 1;
  }
  
  message LoginRequest {
    string username = 1;
    string password = 2;
  }
  
  message LoginResponse {
    string token = 1;
  }