syntax = "proto3";

option go_package = "./go-proto-output/post";

package post;

service PostService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
    rpc GetPosts (GetPostsRequest) returns (GetPostsResponse);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
  }

message CreatePostRequest {
    string content = 1;
  }
  
  message CreatePostResponse {
    string message = 1;
    Post post = 2;
  }
  
  message GetPostRequest {
    string id = 1;
  }
  
  message GetPostResponse {
    Post post = 1;
  }
  
  message GetPostsRequest {}
  
  message GetPostsResponse {
    repeated Post posts = 1;
  }
  
  message UpdatePostRequest {
    string id = 1;
    string content = 2;
  }
  
  message UpdatePostResponse {
    string message = 1;
    Post post = 2;
  }
  
  message DeletePostRequest {
    string id = 1;
  }
  
  message DeletePostResponse {
    string message = 1;
  }
  
  message Post {
    string id = 1;
    string content = 2;
    string author = 3;
  }